--- a/project.yaml
+++ b/project.yaml
@@ -12,3 +12,13 @@ actions:
     outputs:
       highly_sensitive:
         cohort: output/dataset.csv
+
+  generate_dataset_report:
+    run: >
+      dataset-report:v0.0.26
+        --input-files output/dataset.csv
+        --output-dir output
+    needs: [generate_dataset]
+    outputs:
+      moderately_sensitive:
+        dataset_report: output/dataset.html
