--- a/project.yaml
+++ b/project.yaml
@@ -18,4 +18,4 @@ actions:
       generate-dataset analysis/simple_dataset_definition.py --output output/dataset_2.csv
     outputs:
       highly_sensitive:
-        cohort: output/dataset_2.csv
+        cohort: output/simple_dataset.csv
